--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis quisquam, consequatur placeat animi optio quam quas autem incidunt deserunt. Iure vel molestias magnam illum, consequuntur vero sequi possimus adipisci ipsam?</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum impedit aliquid ipsa vero error porro ut quidem perspiciatis minus. Voluptate omnis maiores voluptas ea, quod incidunt reiciendis quam iure debitis.</p>
+    <h1>Bye</h1>
 </body>
 </html>
